# nautilus

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  WORK_NOTES.md
.dep/accounts/: delete.rs
.dep/derive/: Cargo.toml
.dep/syn/: Cargo.toml
.dep/syn/src/accounts/: crud.rs  mod.rs  parser.rs  spawn.rs
.dep/syn/src/entry/: mod.rs  spawn.rs
.docs/: concept.rs
.github/workflows/: node.js.yml  python-package.yml  rust.yml
.specs/: create_account.rs  create_arb_pda.rs  create_table_pda.rs  create_token.rs  transfer_cpi.rs  transfer_pda.rs  transfer_token.rs
cli/: Cargo.toml  README.md
cli/src/: build.rs  core.rs  main.rs  output.rs  processor.rs  source.rs
cli/src/core/: cmd.rs  config.rs  mod.rs
docs/: HowItWorks.md  README.md  package-lock.json  package.json  tailwind.config.js
docs/config/: global.config.ts
docs/interfaces/: config.d.ts  seo.d.ts
docs/lib/: markdownConverter.ts
docs/md/: HowItWorks(old).md  getting-started.md  how-it-works.md  installation.md  javascript-sdk.md  python-sdk.md  state.md  tables.md  tokens.md  wallets.md  what-is-nautilus.md
docs/src/components/: DocsLayout.tsx  Hero.tsx  Navbar.tsx  SEO.tsx
docs/src/pages/: index.tsx
docs/src/pages/docs/: [slug].tsx
docs/src/styles/: Transitions.module.css
js/: package-lock.json  package.json  tsconfig.json
js/idl/: program-nautilus.json  program-nautilus.ts  program_shank.json
js/src/: idl.ts  index.ts  main.ts  types.ts
js/src/sql/: index.ts  query.ts  table.ts
js/src/util/: index.ts
js/tests/: instantiate.test.ts  main.test.ts  sql-parse.test.ts  tsconfig.test.json
py/: README.md  setup.py
py/nautilus/: __init__.py  index.py
py/nautilus/util/: __init__.py  index.py
py/tests/: sql_parse.py
solana/: Cargo.toml
solana/derive/: Cargo.toml
solana/derive/crud/: Cargo.toml
solana/derive/crud/src/: lib.rs
solana/derive/src/: lib.rs
solana/derive/tests/: test.rs
solana/derive/tests/accounts/: 01-parse.rs  02-impl-nautilus-account.rs
solana/derive/tests/entrypoint/: 01-parse.rs
solana/idl/: Cargo.toml  nautilus-idl.json
solana/idl/src/: accounts.rs  idl_instruction.rs  idl_metadata.rs  idl_nautilus_config.rs  idl_type.rs  idl_type_def.rs  instructions.rs  lib.rs  types.rs  util.rs
solana/idl/src/converters/: mod.rs  py.rs  ts.rs
solana/idl/tests/: idl.rs
solana/src/: accounts.rs  error.rs  lib.rs
solana/src/accounts/: auth.rs  autoincrement.rs  create.rs  data.rs  delete.rs  mod.rs  update.rs
solana/src/cpi/: associated_token.rs  create.rs  mod.rs  nautilus.rs  system.rs  token.rs  token_metadata.rs  transfer.rs
solana/src/entry/: mod.rs
solana/src/objects/: error.rs  mod.rs  wallet.rs
solana/src/objects/accounts/: mod.rs
solana/src/objects/pda/: index.rs  mod.rs
solana/src/objects/properties/: _update.rs  create.rs  data.rs  mod.rs  mutable.rs  record.rs  signer.rs  table.rs  tokens.rs
solana/src/objects/record/: index.rs  mod.rs
solana/src/objects/records/: index.rs  mod.rs
solana/src/objects/table/: index.rs  mod.rs
solana/src/objects/token/: associated_token.rs  metadata.rs  mint.rs  mod.rs
solana/src/objects/tokens/: associated_token.rs  edition.rs  metadata.rs  mint.rs  mod.rs  nft.rs  token.rs
solana/src/objects/wallet/: mod.rs
solana/src/objects/wallets/: mod.rs
solana/src/properties/: _update.rs  create.rs  data.rs  mod.rs  mutable.rs  signer.rs  update.rs
solana/syn/: Cargo.toml
solana/syn/src/: accounts.rs  entrypoint.rs  lib.rs  parser.rs  state.rs  util.rs
solana/syn/src/accounts/: accounts_borsh.rs  accounts_crud.rs  accounts_shank.rs  borsh.rs  crud.rs  data.rs  error.rs  mod.rs  parser.rs  spawn.rs
solana/syn/src/entry/: borsh.rs  call_context.rs  entry_enum.rs  entry_variant.rs  idl.rs  mod.rs  parser.rs  processor.rs  required_account.rs  spawn.rs
solana/syn/src/entrypoint/: borsh.rs  entrypoint_borsh.rs  entrypoint_processor.rs  entrypoint_shank.rs  mod.rs  processor.rs  spawn.rs
solana/syn/src/object/: borsh_impl.rs  create.rs  data.rs  default_instructions.rs  mod.rs  parser.rs  seeds.rs  source.rs
solana/syn/src/type/: mod.rs
solana/tests/: accounts.rs  core.rs  crud.rs.txt  data.rs  entry-pda.rs  entry.rs  entry_associated_token.rs  entry_create_associated_token.rs  entry_create_metadata.rs  entry_create_mint.rs  entry_create_token.rs  entry_create_wallet.rs  entry_metadata.rs  entry_mint.rs  entry_record.rs  entry_token.rs  entry_transfer.rs  entry_wallet.rs  entrypoint.rs  impl_test.rs  mock.rs  object.rs  read.rs  table.rs  table_impl.rs  test.rs
solana/tests/accounts/: 01-parse.rs  02-parse-attrs.rs  03-account-inner.rs  04-account-borsh.rs
solana/tests/entrypoint/: 01-parse.rs  02-entrypoint-borsh.rs
test-programs/: package.json
test-programs/program-nautilus/: package.json
test-programs/program-nautilus/program/: Cargo.toml  program-nautilus.json
test-programs/program-nautilus/program/src/: lib.rs  (+3 more)
test-programs/program-nautilus/tests/: all-tests.sh  const.ts  instruction.ts  test-ix.ts  test.ts
test-programs/program-shank/: package.json
test-programs/program-shank/program/: Cargo.toml
test-programs/program-shank/tests/: test.ts
test-programs/tests/: all-tests.sh  const.ts
test-programs/tests/basic/: test.ts
test-programs/tests/create/: test.ts
test-programs/tests/source-basic/: test.ts
test-programs/tests/source-create/: test.ts
test-programs/tests/source-robust/: test.ts
test/gen-nautilus/: Cargo.toml
test/program-native/: Cargo.toml
test/program-native/src/: lib.rs  processor.rs
test/program-nautilus-advanced/: Cargo.toml
test/program-nautilus-advanced/src/: instructions.rs  lib.rs  state.rs
test/program-nautilus/program/: Cargo.toml
test/program-nautilus/src/: lib.rs
tests/: package-lock.json  package.json
tests/tests/: all-tests.sh  const.ts  tsconfig.test.json
tests/tests/accounts/: test.ts
tests/tests/create-records/: test.ts
tests/tests/create-source/: test.ts
tests/tests/records/: test.ts
tests/tests/records-2/: test.ts
tests/tests/tokens/: test.ts
tests/tests/wallets/: test.ts
(+67 files in other folders)
