[package]
name = "nautilus-cli"
version = "0.0.1"
authors = ["Joe Caulfield <jcaulfield135@gmail.com>"]
repository = "https://github.com/realbuffalojoe/nautilus"
license = "Apache-2.0"
description = "Nautilus CLI for building & deploying your Solana program"
rust-version = "1.65"
edition = "2021"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
spinners = "4.1.0"