[package]
name = "nautilus"
version = "0.0.1"
authors = ["Joe Caulfield <jcaulfield135@gmail.com>"]
repository = "https://github.com/nautilus-project/nautilus"
license = "Apache-2.0"
description = "SQL-native Solana program framework"
rust-version = "1.59"
edition = "2021"

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.3"
mpl-token-metadata = "1.9.1"
nautilus-derive = { path = "./derive", version = "0.0.1" }
shank = "0.0.12"
solana-program = "1.15.0"
spl-associated-token-account = "1.1.3"
spl-token = "3.5.0"
