[package]
name = "nautilus"
version = "0.0.1"
authors = ["Joe Caulfield <jcaulfield135@gmail.com>"]
repository = "https://github.com/nautilus-project/nautilus"
license = "Apache-2.0"
description = "SQL-native Solana program framework"
rust-version = "1.59"
edition = "2021"

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.3"
mpl-token-metadata = { version = "1.9.1", features = ["no-entrypoint"] }
nautilus-derive = { path = "./derive", version = "0.0.1" }
num-traits = "0.2.15"
solana-program = "1.15.2"
spl-associated-token-account = "1.1.3"
spl-token = "3.5.0"
spl-token-2022 = "0.6.1"
thiserror = "1.0.40"
