[package]
name = "nautilus-derive"
version = "0.0.1"
authors = ["Joe Caulfield <jcaulfield135@gmail.com>"]
repository = "https://github.com/realbuffalojoe/nautilus"
license = "Apache-2.0"
description = "Nautilus derive macro for adding CRUD operations to data types"
rust-version = "1.59"
edition = "2021"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/test.rs"

[dev-dependencies]
solana-program = "1.15.0"
trybuild = "1.0.77"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
nautilus-syn = { path = "../syn", version = "0.0.1" }
syn = { version = "1.0", features = ["extra-traits"] }
