[package]
name = "nautilus-idl"
version = "0.0.1"
authors = ["Joe Caulfield <jcaulfield135@gmail.com>"]
repository = "https://github.com/nautilus-project/nautilus"
license = "Apache-2.0"
description = "Generates an IDL for a Nautilus program"
rust-version = "1.59"
edition = "2021"

[dependencies]
borsh = "0.10.2"
borsh-derive = "0.10.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
syn = { version = "1.0", features = ["extra-traits", "full"] }
toml = "0.7.2"
