[package]
name = "nautilus-syn"
version = "0.0.1"
authors = ["Joe Caulfield <jcaulfield135@gmail.com>"]
repository = "https://github.com/nautilus-project/nautilus"
license = "Apache-2.0"
description = "Lib for parsing syntax for Nautilus derive macros"
rust-version = "1.59"
edition = "2021"

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.3"
case = "1.0.0"
convert_case = "0.6.0"
proc-macro2 = "1.0"
quote = "1.0"
shank_macro_impl = "0.0.12"
solana-program = "1.15.0"
syn = { version = "1.0", features = ["extra-traits", "full"] }
