[package]
name = "nautilus-derive-crud"
version = "0.0.1"
authors = ["Joe Caulfield <jcaulfield135@gmail.com>"]
repository = "https://github.com/realbuffalojoe/nautilus"
license = "Apache-2.0"
description = "Nautilus derive macro for adding CRUD operations to data type"
rust-version = "1.59"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.3"
nautilus-syn = { path = "../../syn", version = "0.0.1" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }